--- a/site/index.html
+++ b/site/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Проектная Деятельность</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <header>
+        <h1>Проектная Деятельность</h1>
+        <p>Автоматизация индивидуального плана аспиранта</p>
+    </header>
 
+    <nav>
+        <ul>
+            <li><a href="index.html" class="active">Главная</a></li>
+            <li><a href="about.html">О проекте</a></li>
+            <li><a href="journal.html">Журнал</a></li>
+            <li><a href="resources.html">Ресурсы</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section>
+            <h2>Главная страница</h2>
+            <h3>Аннотация проекта:</h3>
+            <p>Проект "Автоматизация индивидуального плана аспиранта" направлен на разработку системы, которая позволит автоматизировать процесс планирования, мониторинга и корректировки индивидуального плана аспиранта. Основные цели проекта включают упрощение взаимодействия между аспирантами и научными руководителями, создание удобного интерфейса для внесения изменений, а также обеспечение интеграции с существующими системами управления учебным процессом.</p>
+            <p>Реализация проекта включает разработку веб-интерфейса для управления планами, настройку автоматических уведомлений о сроках выполнения задач и внедрение системы анализа выполненных мероприятий. Проект призван повысить эффективность образовательного процесса и упростить административные процедуры.</p>
+        </section>
+    </main>
+
+    </body>
+</html>
